--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Gemini Talks</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/static/css/app.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -180,9 +180,9 @@
 </footer>
 <!-- Footer -->
     <!-- AND HERE -->
-  <script src="static/static/js/jquery-3.2.1.min.js"></script>
-    <script src="static/static/js/popper.min.js"></script>
-    <script src="static/static/js/bootstrap.min.js"></script>
+  <script src="jquery-3.2.1.min.js"></script>
+    <script src="popper.min.js"></script>
+    <script src="bootstrap.min.js"></script>
      
 
   </body>
