--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Gemini Talks</a>
+        <a class="navbar-brand" href="index.html">Gemini Talks</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,7 @@
             </ul>
           
             <form class="form-inline ml-auto">
-              <a href="#" class="btn btn-outline-secondary">Log in</a>
+              <a href="login.html" class="btn btn-outline-secondary">Log in</a>
               <a href="#" class="btn btn-info ml-2">Sign up</a>
             </form>
           
