updated about html file
changed a text error

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                     As Regards My skills: 
                     I'm great with HTML5 and CSS3 and possess smart command of JavaScript.
 I can help bring your ideas to reality and develop very nice UI/UX Views.
-I've built personal projects, participated in various coding bootcamps and also taken Various courses that I believe have prepared me well enough to serve my clients perfectly.
+I've built personal projects, participated in various coding bootcamps and also taken Various courses that I believe have prepared me well enough to serve you wonderfully.
 I love coding and I hope anyone reading this can contribute to my professional
 journey.
 
