--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.htm">
+            <a class="navbar-brand" href="index.html">
                 <h1>Emmanuel Obi</h1>
             </a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navMenu">
@@ -22,9 +22,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navMenu">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.htm" class="nav-link active">Home</a></li>
-                    <li class="nav-item"><a href="about.htm" class="nav-link">About Me</a></li>
-                    <li class="nav-item"><a href="Contact.htm" class="nav-link">Contact Me</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
+                    <li class="nav-item"><a href="Contact.html" class="nav-link">Contact Me</a></li>
                 </ul>
             </div>
         </nav>
