--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     </p>
 
                     
-                    <a href="Contact.htm"><button>CONTACT ME</button></a>
-                    <a href="about.htm"><button>ABOUT ME</button></a>
+                    <a href="Contact.html"><button>CONTACT ME</button></a>
+                    <a href="about.html"><button>ABOUT ME</button></a>
                 </div>
                 <div class="img-container">
                     <img src="pic2.jpeg" alt="Emmanuel Posing for a picture">
