--- a/about.html
+++ b/about.html
@@ -33,19 +33,19 @@
         <main class="main">
             <article class="about-me-container">
                 <p>
-                    My full name is Obi Emmanuel Nnamdi. i'm from Delta State, Nigeria.I reside in Lagos but i school in Ogun State. I am the third of five kids in a family of seven. 
+                    My full name is Obi Emmanuel Nnamdi. I'm from Delta State, Nigeria.I reside in Lagos but i school in Ogun State. I am the third of five kids in a family of seven. 
                 </p>
                 <p>
                     I'm 19 Years Old, Currently a FirstClass Undergraduate Studying Electrical/Electronics Engineering at Olabisi Onabanjo University, Ago-iwoye Ogun State.  If i was to describe my self with five words i'd say i am Brilliant, Creative, Consistent, Reliable and Disciplined.
-                    i am eager to learn and always prepared to deliver, I have a drive for success and I get the job done.
+                    I am eager to learn and always prepared to deliver, i have a drive for success and i get the job done.
                 </p>
                 <p>
                     As Regards My skills: 
                     I'm great with HTML5 & CSS3, Python, JavaScript, Django, SQL, Git and some related Tools.
 I can help bring your ideas to reality and develop very nice UI/UX Views.
-I've built personal projects and also taken Various courses that I believe is shaping me well enough to become an all round professional.
+I've built personal projects and also taken Various courses that i believe is shaping me well enough to become an all round professional.
 I'll leave a link to where you can see projects i've worked on.
-I love coding and I hope anyone reading this can contribute to my professional
+I love coding and i hope anyone reading this can contribute to my professional
 journey.
 
                 </p>
