--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <main class="main">
             <div class="txt-img-container">
                 <div class="txt-container">
-                     <h1>Hello, i'm Emmanuel.</h1><br>
+                     <h1>Hello, I'm Emmanuel.</h1><br>
                     <p>
-                       i'm a Software Developer, specializing in User interface/ User experience development.<br> i'll leave a link to my github repo so you can checkout my work<br> and feel free to get in touch if you want to work with me. 
+                       I'm a Software Developer specializing in User interface/ User experience development.<br> I'll leave a link to my github repo so you can checkout my work<br> and feel free to get in touch if you want to work with me. 
                     </p>
 
                     
