--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emmanuel Obi</title>
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./ContactFrom_v1/vendor/bootstrap/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./ContactFrom_v1/vendor/animate/animate.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./ContactFrom_v1/vendor/css-hamburgers/hamburgers.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./ContactFrom_v1/vendor/select2/select2.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./ContactFrom_v1/css/util.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./ContactFrom_v1/css/main.css"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -34,13 +70,13 @@
         <div class="collapse navbar-collapse" id="navMenu">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="index.html" class="nav-link active">Home</a>
+              <a href="#main" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
               <a href="#about" class="nav-link">About Me</a>
             </li>
             <li class="nav-item">
-              <a href="Contact.html" class="nav-link">Contact Me</a>
+              <a href="#contact" class="nav-link">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -49,15 +85,10 @@
 
     <main id="main" class="main container-fluid">
       <div class="row txt-img-container">
-        <!-- <div class="img-container col-md-4">
-          <img
-            class="img-fluid"
-            src="./images/pic2.jpeg"
-            alt="Emmanuel Posing for a picture"
-          />
-        </div> -->
         <div class="txt-container col-md-12 p-4">
-          <h2 class="text-capitalize page-header">Hello, I'm Emmanuel.</h2>
+          <h2 class="text-capitalize page-header text-dark">
+            Hello, I'm Emmanuel.
+          </h2>
           <br />
           <p>
             I'm an Entry-level Software Developer specializing in User
@@ -66,105 +97,198 @@
             and feel free to get in touch if you want to work with me.
           </p>
           <div class="cta">
-            <a href="Contact.html" class="btn bg-dark">Contact Me</a>
+            <a href="#contact" class="btn bg-dark">Contact Me</a>
             <a href="#about" class="btn bg-dark">About Me</a>
           </div>
         </div>
       </div>
     </main>
-    <section id="about container-fluid">
+    <section id="about" class="container-fluid">
+      <div class="row">
+        <div class="page-header text-center col-lg-12 bg-dark p-4">
+          <h2 class="text-capitalize">about me</h2>
+        </div>
+      </div>
       <div class="row">
         <article
-          class="about-me-container col-md-9 p-4 ml-auto mr-auto p-4 m-4"
+          class="about-me-container col-xl-8 p-4 ml-auto mr-auto p-4 m-4"
         >
           <p>
             My full name is Obi Emmanuel Nnamdi. I'm from Delta State, Nigeria.
-            I reside in Lagos but i school in Ogun State. I am the third of five
-            kids in a family of seven.
+            I reside in Lagos but i school in Ogun State.
           </p>
           <p>
             I'm 19 Years Old, Currently a FirstClass Undergraduate Studying
             Electrical/Electronics Engineering at Olabisi Onabanjo University,
-            Ago-iwoye Ogun State. If i was to describe my self with five words
-            i'd say i am Brilliant, Creative, Consistent, Reliable and
-            Disciplined. I am eager to learn and always prepared to deliver, i
-            have a drive for success and i get the job done.
+            Ago-iwoye Ogun State. I believe i'm a creative thinker,a
+            goal-getter,a very reliable team player and a natural leader. I'm
+            eager to learn new technologies and always prepared to deliver
+            results.
           </p>
           <p>
             As Regards My skills: I'm great with HTML5 & CSS3, Python,
-            JavaScript, Django, SQL, Git and some related Tools. I can help
-            bring your ideas to reality and develop very nice UI/UX Views. I've
-            built personal projects and also taken Various courses that i
-            believe is shaping me well enough to become an all round
-            professional. I'll leave a link to where you can see projects i've
-            worked on. I love coding and i hope anyone reading this can
+            JavaScript, Django, SQL, Git and some related technologies. I can
+            help bring your ideas to reality and develop very nice UI/UX Views.
+            Learning from outstanding resources and taking on personal projects
+            and believe is shaping me well enough to become an all round
+            professional. I'll leave a link to where you can view projects i've
+            worked on. I love what i do and i hope anyone reading this can
             contribute to my professional journey.
           </p>
         </article>
-        <div
-          id="carouselExampleDark"
-          class="carousel carousel-dark slide col-md-9 p-4 ml-auto mr-auto"
-          data-bs-ride="carousel"
-        >
-          <ol class="carousel-indicators">
-            <li
-              data-bs-target="#carouselExampleDark"
-              data-bs-slide-to="0"
-              class="active"
-            ></li>
-            <li data-bs-target="#carouselExampleDark" data-bs-slide-to="1"></li>
-            <li data-bs-target="#carouselExampleDark" data-bs-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="./images/pic2.jpeg" class="d-block w-100" alt="..." />
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>
-                  Nulla vitae elit libero, a pharetra augue mollis interdum.
-                </p>
+        <div class="slider col-xl-4 p-4 ml-auto mr-auto">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="1"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="2"
+              ></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="d-block w-100"
+                  src="./images/pic2.jpeg"
+                  alt="First slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="./images/pic4.jpg"
+                  alt="Second slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100"
+                  src="./images/pic1.jpg"
+                  alt="Third slide"
+                />
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="./images/pic4.jpg" class="d-block w-100" alt="..." />
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./images/pic1.jpg" class="d-block w-100" alt="..." />
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>
-                  Praesent commodo cursus magna, vel scelerisque nisl
-                  consectetur.
-                </p>
-              </div>
-            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleIndicators"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleIndicators"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleDark"
-            role="button"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleDark"
-            role="button"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </a>
         </div>
       </div>
     </section>
-    <footer class="bg-dark text-center text-lg-start">
+    <section id="contact" class="container-fluid">
+      <div class="row">
+        <div class="page-header text-center col-lg-12 bg-dark p-4">
+          <h2 class="text-capitalize">Contact me</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="contact1 col-lg-12">
+          <div class="container-contact1">
+            <div class="contact1-pic js-tilt" data-tilt>
+              <img src="./ContactFrom_v1/images/img-01.png" alt="IMG" />
+            </div>
+
+            <form class="contact1-form validate-form">
+              <span class="contact1-form-title"> Get in touch </span>
+
+              <div
+                class="wrap-input1 validate-input"
+                data-validate="Name is required"
+              >
+                <input
+                  class="input1"
+                  type="text"
+                  name="name"
+                  placeholder="Name"
+                />
+                <span class="shadow-input1"></span>
+              </div>
+
+              <div
+                class="wrap-input1 validate-input"
+                data-validate="Valid email is required: ex@abc.xyz"
+              >
+                <input
+                  class="input1"
+                  type="text"
+                  name="email"
+                  placeholder="Email"
+                />
+                <span class="shadow-input1"></span>
+              </div>
+
+              <div
+                class="wrap-input1 validate-input"
+                data-validate="Subject is required"
+              >
+                <input
+                  class="input1"
+                  type="text"
+                  name="subject"
+                  placeholder="Subject"
+                />
+                <span class="shadow-input1"></span>
+              </div>
+
+              <div
+                class="wrap-input1 validate-input"
+                data-validate="Message is required"
+              >
+                <textarea
+                  class="input1"
+                  name="message"
+                  placeholder="Message"
+                ></textarea>
+                <span class="shadow-input1"></span>
+              </div>
+
+              <div class="container-contact1-form-btn">
+                <button class="contact1-form-btn">
+                  <span>
+                    Send Email
+                    <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                  </span>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="bg-dark text-center text-lg-start p-2">
       <!-- Copyright -->
       <div class="text-center p-3 text-light">
         © 2020 Copyright:
@@ -190,5 +314,32 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="./ContactFrom_v1/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="./ContactFrom_v1/vendor/bootstrap/js/popper.js"></script>
+    <script src="./ContactFrom_v1/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./ContactFrom_v1/vendor/select2/select2.min.js"></script>
+    <script src="./ContactFrom_v1/vendor/tilt/tilt.jquery.min.js"></script>
+    <script>
+      $(".js-tilt").tilt({
+        scale: 1.1,
+      });
+    </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-23581568-13");
+    </script>
+
+    <script src="./ContactFrom_v1/js/main.js"></script>
   </body>
 </html>
