Made minor change to social links

--- a/index.html
+++ b/index.html
@@ -296,15 +296,17 @@
               </div>
               <div class="social-icons">
                 <span class="icon"
-                  ><a href="https://www.linkedin.com/in/emmanuel-obi-7795511b1/"
+                  ><a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/emmanuel-obi-7795511b1/"
                     ><img src="./images/linkedin.svg" alt="linkedin image" /></a
                 ></span>
                 <span class="icon"
-                  ><a href="https://twitter.com/koliko_man"
+                  ><a target="_blank" href="https://twitter.com/koliko_man"
                     ><img src="./images/twitter.svg" alt="twitter image" /></a
                 ></span>
                 <span class="icon"
-                  ><a href="https://github.com/EmmanuelObi"
+                  ><a target="_blank" href="https://github.com/EmmanuelObi"
                     ><img src="./images/github.svg" alt="github image" /></a
                 ></span>
               </div>
